Viz 10: fix tooltips on mobile

--- a/style.css
+++ b/style.css
@@ -380,6 +380,10 @@ VIZ 10
   .vis-container-inner {
     position: relative;
 
+    .mobile-section {
+      position: relative;
+    }
+
     svg {
       overflow: visible;
     }
